2005-02-12  Per Bothner  <per@bothner.com>

	* Parser.java (parseFunctionDefinition): Use setName method, since
	LambdaExp's name field was removed.

2004-01-09  Per Bothner  <per@bothner.com>

	* Parser.java (main):  Update Environment.setCurrent to setGlobal.

2003-04-06  Per Bothner  <per@bothner.com>

	* Lexer.java (main):  Don't use SFormat.
	* Parser.java (main):  Likewise.

2001-10-19  Per Bothner  <per@bothner.com>

	* Parser.java (main):   Catch Throwable as eval may now throw it.

2001-03-08  Per Bothner  <per@bothner.com>

	* Lexer.java, Parser.java:  Update gnu.kawa.util.Sequence to gnu.lists.

2000-06-19  Per Bothner  <per@bothner.com>

	* Lexer.java:  Update import as Char has moved.

2000-02-01  Per Bothner  <per@bothner.com>

	* Parser.java:  No longer imports moved kawa.lang.Interpreter.

Sat Oct 17 13:24:08 1998  Per Bothner  <bothner@cygnus.com>

	* Parser.java:  Add (parser-only) support for while loops.

Thu Jul 23 08:44:16 1998  Per Bothner  <bothner@cygnus.com>

	Update import statements due to classes moved from kawa.lang to gnu.

Thu Jun 25 22:41:27 1998  Per Bothner  <bothner@cygnus.com>

	* Lexer.java:  Update for Lexer and SyntaxException moved to gnu.text.
	* Parser.java:  Likewise.

Sun May 24 11:53:12 1998  Per Bothner  <bothner@cygnus.com>

	* Lexer.java:  New extends kawa.lang.Lexer.
	* Parser.java:  Update for new Lexer error framework.

Tue Apr 28 17:23:38 1998  Per Bothner  <bothner@cygnus.com>

	* Prompter.java:  New class.
	* Makefile.am (java_JAVA):  Add Prompter.java.
	* Parser.java (main):  Use Prompter to set repl prompt.

	* Reserved.java:  Add remaining operator and some other tokens.
	* Lexer.java:  Handle remaining operator and some other tokens.
	(resered):  New sttaic Hashtable of reserved identifiers.
	* Parser.java:  Handle most of expressions, IfStatement, and
	very basic support for FunctionDefinition.

Sat Apr  4 17:42:02 1998  Per Bothner  <bothner@cygnus.com>

	* New directory.  Very pre-alpha.
